// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`grade · 학급 단원별 현황(/report) > 경계 — 11자 "C1" + 공백 8 + "X": 프로시저 인자 VARCHAR(10) 에서 잘리는지 [BR-24] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "avg_score": "64.28",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "97.5",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M5-1",
      "unit_name": "분수의 덧셈과 뺄셈",
    },
    {
      "avg_score": "76.80",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "96.0",
      "min_score": "62.0",
      "missing": 0,
      "submitted": 10,
      "unit": "M5-2",
      "unit_name": "분수의 곱셈",
    },
    {
      "avg_score": "62.58",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "98.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M5-3",
      "unit_name": "소수의 곱셈",
    },
    {
      "avg_score": "58.05",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "97.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M6-1",
      "unit_name": "분수의 나눗셈",
    },
    {
      "avg_score": "72.55",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "89.0",
      "min_score": "61.5",
      "missing": 4,
      "submitted": 6,
      "unit": "M6-2",
      "unit_name": "비와 비율 (보너스)",
    },
  ],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 경계 — 11자 "C1XXXXXXXXX" (10자로 잘려도 없는 학급) [BR-24] 1`] = `
{
  "count": 0,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 경계 — 소문자 "c1" (DB 정렬 규칙에 따른 일치 여부) [BR-24] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "avg_score": "64.28",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "97.5",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M5-1",
      "unit_name": "분수의 덧셈과 뺄셈",
    },
    {
      "avg_score": "76.80",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "96.0",
      "min_score": "62.0",
      "missing": 0,
      "submitted": 10,
      "unit": "M5-2",
      "unit_name": "분수의 곱셈",
    },
    {
      "avg_score": "62.58",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "98.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M5-3",
      "unit_name": "소수의 곱셈",
    },
    {
      "avg_score": "58.05",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "97.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M6-1",
      "unit_name": "분수의 나눗셈",
    },
    {
      "avg_score": "72.55",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "89.0",
      "min_score": "61.5",
      "missing": 4,
      "submitted": 6,
      "unit": "M6-2",
      "unit_name": "비와 비율 (보너스)",
    },
  ],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 경계 — 앞뒤 공백 " C1 " 은 trim 되어 C1 [BR-24] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "avg_score": "64.28",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "97.5",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M5-1",
      "unit_name": "분수의 덧셈과 뺄셈",
    },
    {
      "avg_score": "76.80",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "96.0",
      "min_score": "62.0",
      "missing": 0,
      "submitted": 10,
      "unit": "M5-2",
      "unit_name": "분수의 곱셈",
    },
    {
      "avg_score": "62.58",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "98.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M5-3",
      "unit_name": "소수의 곱셈",
    },
    {
      "avg_score": "58.05",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "97.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M6-1",
      "unit_name": "분수의 나눗셈",
    },
    {
      "avg_score": "72.55",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "89.0",
      "min_score": "61.5",
      "missing": 4,
      "submitted": 6,
      "unit": "M6-2",
      "unit_name": "비와 비율 (보너스)",
    },
  ],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 누락 — class_id 없음은 기본 학급 C1 [BR-24] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "avg_score": "64.28",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "97.5",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M5-1",
      "unit_name": "분수의 덧셈과 뺄셈",
    },
    {
      "avg_score": "76.80",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "96.0",
      "min_score": "62.0",
      "missing": 0,
      "submitted": 10,
      "unit": "M5-2",
      "unit_name": "분수의 곱셈",
    },
    {
      "avg_score": "62.58",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "98.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M5-3",
      "unit_name": "소수의 곱셈",
    },
    {
      "avg_score": "58.05",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "97.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M6-1",
      "unit_name": "분수의 나눗셈",
    },
    {
      "avg_score": "72.55",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "89.0",
      "min_score": "61.5",
      "missing": 4,
      "submitted": 6,
      "unit": "M6-2",
      "unit_name": "비와 비율 (보너스)",
    },
  ],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 빈값 — class_id= 은 기본 학급 C1 [BR-24] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "avg_score": "64.28",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "97.5",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M5-1",
      "unit_name": "분수의 덧셈과 뺄셈",
    },
    {
      "avg_score": "76.80",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "96.0",
      "min_score": "62.0",
      "missing": 0,
      "submitted": 10,
      "unit": "M5-2",
      "unit_name": "분수의 곱셈",
    },
    {
      "avg_score": "62.58",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "98.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M5-3",
      "unit_name": "소수의 곱셈",
    },
    {
      "avg_score": "58.05",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "97.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M6-1",
      "unit_name": "분수의 나눗셈",
    },
    {
      "avg_score": "72.55",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "89.0",
      "min_score": "61.5",
      "missing": 4,
      "submitted": 6,
      "unit": "M6-2",
      "unit_name": "비와 비율 (보너스)",
    },
  ],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 빈값 — 공백만 있는 class_id 는 기본 학급 C1 [BR-24] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "avg_score": "64.28",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "97.5",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M5-1",
      "unit_name": "분수의 덧셈과 뺄셈",
    },
    {
      "avg_score": "76.80",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "96.0",
      "min_score": "62.0",
      "missing": 0,
      "submitted": 10,
      "unit": "M5-2",
      "unit_name": "분수의 곱셈",
    },
    {
      "avg_score": "62.58",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "98.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M5-3",
      "unit_name": "소수의 곱셈",
    },
    {
      "avg_score": "58.05",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "97.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M6-1",
      "unit_name": "분수의 나눗셈",
    },
    {
      "avg_score": "72.55",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "89.0",
      "min_score": "61.5",
      "missing": 4,
      "submitted": 6,
      "unit": "M6-2",
      "unit_name": "비와 비율 (보너스)",
    },
  ],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 이상값 — class_id 를 두 번 보냄 (C1, C2) [BR-24] 1`] = `
{
  "count": 0,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 이상값 — 따옴표가 든 값은 문자열 그대로 비교 [BR-24] 1`] = `
{
  "count": 0,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 이상값 — 아주 긴 값 1000자 [BR-24] 1`] = `
{
  "count": 0,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 이상값 — 없는 학급 C9 — 재적 0명이면 빈 결과 [BR-18] 1`] = `
{
  "count": 0,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 이상값 — 음수 모양 "-1" [BR-24] 1`] = `
{
  "count": 0,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 정상 — 학급 C1 단원별 현황 [BR-18 · BR-19 · BR-20 · BR-21 · BR-22] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "avg_score": "64.28",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "97.5",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M5-1",
      "unit_name": "분수의 덧셈과 뺄셈",
    },
    {
      "avg_score": "76.80",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "96.0",
      "min_score": "62.0",
      "missing": 0,
      "submitted": 10,
      "unit": "M5-2",
      "unit_name": "분수의 곱셈",
    },
    {
      "avg_score": "62.58",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "98.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M5-3",
      "unit_name": "소수의 곱셈",
    },
    {
      "avg_score": "58.05",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "97.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M6-1",
      "unit_name": "분수의 나눗셈",
    },
    {
      "avg_score": "72.55",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "89.0",
      "min_score": "61.5",
      "missing": 4,
      "submitted": 6,
      "unit": "M6-2",
      "unit_name": "비와 비율 (보너스)",
    },
  ],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 정상 — 학급 C2 [BR-18 · BR-21] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "avg_score": "75.55",
      "enrolled": 10,
      "excluded": 0,
      "late": 0,
      "max_score": "100.0",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M5-1",
      "unit_name": "분수의 덧셈과 뺄셈",
    },
    {
      "avg_score": "64.20",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "99.5",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M5-2",
      "unit_name": "분수의 곱셈",
    },
    {
      "avg_score": "71.99",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "94.0",
      "min_score": "55.5",
      "missing": 0,
      "submitted": 10,
      "unit": "M5-3",
      "unit_name": "소수의 곱셈",
    },
    {
      "avg_score": "72.81",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "100.0",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M6-1",
      "unit_name": "분수의 나눗셈",
    },
    {
      "avg_score": "83.65",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "100.0",
      "min_score": "67.5",
      "missing": 4,
      "submitted": 6,
      "unit": "M6-2",
      "unit_name": "비와 비율 (보너스)",
    },
  ],
  "status": 200,
}
`;

exports[`grade · 학급 단원별 현황(/report) > 정상 — 학급 C3 [BR-18 · BR-21] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "avg_score": "68.14",
      "enrolled": 10,
      "excluded": 1,
      "late": 1,
      "max_score": "99.0",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M5-1",
      "unit_name": "분수의 덧셈과 뺄셈",
    },
    {
      "avg_score": "78.62",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "100.0",
      "min_score": "63.5",
      "missing": 0,
      "submitted": 10,
      "unit": "M5-2",
      "unit_name": "분수의 곱셈",
    },
    {
      "avg_score": "67.80",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "100.0",
      "min_score": "0.0",
      "missing": 2,
      "submitted": 8,
      "unit": "M5-3",
      "unit_name": "소수의 곱셈",
    },
    {
      "avg_score": "69.57",
      "enrolled": 10,
      "excluded": 0,
      "late": 1,
      "max_score": "100.0",
      "min_score": "0.0",
      "missing": 1,
      "submitted": 9,
      "unit": "M6-1",
      "unit_name": "분수의 나눗셈",
    },
    {
      "avg_score": "74.75",
      "enrolled": 10,
      "excluded": 1,
      "late": 0,
      "max_score": "91.0",
      "min_score": "59.5",
      "missing": 4,
      "submitted": 6,
      "unit": "M6-2",
      "unit_name": "비와 비율 (보너스)",
    },
  ],
  "status": 200,
}
`;
